# Intervox

./: .gitignore  Cargo.toml  Intervox.plist  README.md  captions.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
Intervox-design-reference/src/: app.jsx
crates/intervox-cli/: Cargo.toml
crates/intervox-cli/src/: main.rs
crates/intervox-core/: Cargo.toml
crates/intervox-core/src/: config.rs  engine_graph.rs  errors.rs  lib.rs  pipeline.rs  redact.rs  state.rs  usage.rs
crates/intervox-core/src/audio/: delay_line.rs  jitter_buffer.rs  level_meter.rs  mixer.rs  pcm.rs  resampler.rs  vad.rs
crates/intervox-core/src/captions/: transcript_state.rs
crates/intervox-core/src/diagnostics/: metrics.rs
crates/intervox-core/src/realtime/: events.rs  openai_auth.rs
crates/intervox-core/src/virtual_mic/: ring_buffer.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RUNBOOK-acceptance.md  STATUS.md
driver/: CMakeLists.txt  Info.plist
driver/include/: intervox_ring.h
driver/src/: Intervox.c
driver/tests/: property_contract.c
scripts/: build_app.sh  build_driver.sh  driver_env.sh  install_driver.sh  make_dmg.sh  notarize_dmg.sh  notarize_driver.sh  sign_driver.sh  uninstall_driver.sh
src/: App.svelte  CaptionsWindow.svelte  app.css  app.test.ts  captions.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appcfg.rs  captions_overlay.rs  commands.rs  connection_log.rs  devices.rs  driver_status.rs  lib.rs  main.rs  permission.rs  platform_integration.rs  secrets.rs  shortcuts.rs  single_instance.rs  transcript_log.rs  usage_store.rs
src-tauri/src/engine/: capture.rs  graph.rs  mod.rs  playback.rs  realtime.rs  ring.rs  supervisor.rs  system_audio.rs  translate_chain.rs
src-tauri/src/notifications/: mod.rs  reminder.rs
src/components/: Captions.svelte  ConnectionLogModal.svelte  Onboarding.svelte  QuickStatus.svelte  Settings.svelte  Toast.svelte  components.test.ts
src/components/panes/: AccountPane.svelte  AdvancedPane.svelte  AudioPane.svelte  CaptionsPane.svelte  ModeCard.svelte  PrivacyPane.svelte  ShortcutsPane.svelte  StatusPane.svelte  TranslationPane.svelte
src/lib/: constants.test.ts  constants.ts  store.svelte.ts  store.test.ts  tauri.ts  util.test.ts  util.ts
src/lib/controls/: FieldGroup.svelte  PaneTitle.svelte  Pulldown.svelte  Row.svelte  RowLabel.svelte  Segmented.svelte  Slider.svelte  Toggle.svelte  controls.test.ts  index.ts
src/lib/icons/: Check.svelte  Chevron.svelte  Dot.svelte  Glyph.svelte  LangChip.svelte  MenuBarIcon.svelte  Sidebar.svelte  Sys.svelte  icons.test.ts  index.ts
src/lib/vu/: VUBars.svelte  VUDots.svelte  VUStrip.svelte  index.ts  level.ts  vu.test.ts
