[package]
name = "intervox-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Intervox Tauri v2 desktop shell wrapping intervox-core."

[lib]
name = "intervox_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
intervox-core = { path = "../crates/intervox-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
