[package]
name = "intervox-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Intervox Tauri v2 desktop shell wrapping intervox-core."

[lib]
name = "intervox_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
intervox-core = { path = "../crates/intervox-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
cpal = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
parking_lot = "0.12"
dirs = "5"
base64 = "0.22"
block2 = "0.6"
libc = "0.2"
objc2 = "0.6"
objc2-core-audio = { version = "0.3.2", default-features = false, features = ["AudioHardware", "objc2", "objc2-core-audio-types", "objc2-foundation", "std"] }
objc2-core-audio-types = { version = "0.3.2", default-features = false, features = ["CoreAudioBaseTypes", "std"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["CFArray", "CFDictionary", "CFNumber", "CFString", "std"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSString", "NSValue", "std"] }
tauri-plugin-global-shortcut = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
