[package]
name = "intervox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Designer-independent core: audio DSP, state, config, OpenAI event model, ring buffer."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
